# eclipse-weather-forecast

./: README.md  pyproject.toml  run.sh
config/: example_config.json
data/base_maps/: README.md
data/eclipse_path/: README.md
data/forecast/: README.md
src/: generate_image.py  weather_ingest.py
