[tool.poetry]
name = "eclipse-weather-forcast"
version = "0.1.0"
description = ""
authors = ["jmullercuber"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
pygrib = "^2.1.5"
matplotlib = "^3.8.3"
geopandas = "^0.14.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
